// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationsTableComponent should snap like in notification page with 2 notifications sorted by create time 1`] = `
<tm-notifications-table
  NotificationsTableHeaderColorScheme={[Function Object]}
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  __ngContext__={[Function LRootView]}
  deleteNotificationEvent={[Function EventEmitter_]}
  guessTimezone={[Function String]}
  headerColorScheme="0"
  loadNotificationEditFormEvent={[Function EventEmitter_]}
  notificationsTableRowModels={[Function Array]}
  notificationsTableRowModelsSortBy={[Function Number]}
  notificationsTableRowModelsSortOrder="0"
  simpleModalService={[Function SimpleModalService]}
  sortNotificationsTableRowModelsEvent={[Function EventEmitter_]}
>
  <div
    class="row"
  >
    <div
      class="col-12"
    >
      <table
        class="table table-responsive-lg table-striped table-bordered margin-bottom-0"
        id="notifications-table"
      >
        <thead>
          <tr
            class="bg-primary text-white"
          >
            <th
              class="sortable-header"
            >
               Title 
              <span
                class="fa-stack"
              >
                <i
                  class="fas fa-sort"
                />
              </span>
            </th>
            <th
              class="sortable-header"
            >
               Start Time 
              <span
                class="fa-stack"
              >
                <i
                  class="fas fa-sort"
                />
              </span>
            </th>
            <th
              class="sortable-header"
            >
               End Time 
              <span
                class="fa-stack"
              >
                <i
                  class="fas fa-sort"
                />
              </span>
            </th>
            <th
              class="sortable-header"
            >
               Target User 
              <span
                class="fa-stack"
              >
                <i
                  class="fas fa-sort"
                />
              </span>
            </th>
            <th
              class="sortable-header"
            >
               Style 
              <span
                class="fa-stack"
              >
                <i
                  class="fas fa-sort"
                />
              </span>
            </th>
            <th
              class="sortable-header"
            >
               Creation Time 
              <span
                class="fa-stack"
              >
                <i
                  class="fas fa-sort"
                />
                <i
                  class="fas fa-sort-down"
                />
              </span>
            </th>
            <th>
              Actions
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="table-success"
            id="notification1"
          >
            <td
              class="text-break"
            >
              valid title 1
            </td>
            <td
              class="text-break"
            >
              <span
                class="ngb-tooltip-class"
              >
                15 Sep 9:30 AM
              </span>
            </td>
            <td
              class="text-break"
            >
              <span
                class="ngb-tooltip-class"
              >
                15 Sep 9:30 AM
              </span>
            </td>
            <td
              class="text-break"
            >
              INSTRUCTOR
            </td>
            <td
              class="text-break alert alert-success"
            >
              Success (green)
            </td>
            <td
              class="text-break"
            >
              <span
                class="ngb-tooltip-class"
              >
                15 Sep 9:30 AM
              </span>
            </td>
            <td
              class="actions-cell"
            >
              <div
                class="d-flex"
              >
                <button
                  class="btn btn-light btn-sm"
                  type="button"
                >
                   Edit 
                </button>
                <button
                  class="btn btn-danger btn-sm"
                  type="button"
                >
                   Delete 
                </button>
              </div>
            </td>
          </tr>
          <tr
            id="notification2"
          >
            <td
              class="text-break"
            >
              valid title 2
            </td>
            <td
              class="text-break"
            >
              <span
                class="ngb-tooltip-class"
              >
                15 Dec 9:30 AM
              </span>
            </td>
            <td
              class="text-break"
            >
              <span
                class="ngb-tooltip-class"
              >
                15 Sep 9:30 AM
              </span>
            </td>
            <td
              class="text-break"
            >
              GENERAL
            </td>
            <td
              class="text-break alert alert-danger"
            >
              Danger (red)
            </td>
            <td
              class="text-break"
            >
              <span
                class="ngb-tooltip-class"
              >
                15 Nov 9:30 AM
              </span>
            </td>
            <td
              class="actions-cell"
            >
              <div
                class="d-flex"
              >
                <button
                  class="btn btn-light btn-sm"
                  type="button"
                >
                   Edit 
                </button>
                <button
                  class="btn btn-danger btn-sm"
                  type="button"
                >
                   Delete 
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</tm-notifications-table>
`;

exports[`NotificationsTableComponent should snap like in notification page with 2 notifications sorted by start time 1`] = `
<tm-notifications-table
  NotificationsTableHeaderColorScheme={[Function Object]}
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  __ngContext__={[Function LRootView]}
  deleteNotificationEvent={[Function EventEmitter_]}
  guessTimezone={[Function String]}
  headerColorScheme="0"
  loadNotificationEditFormEvent={[Function EventEmitter_]}
  notificationsTableRowModels={[Function Array]}
  notificationsTableRowModelsSortBy={[Function Number]}
  notificationsTableRowModelsSortOrder="0"
  simpleModalService={[Function SimpleModalService]}
  sortNotificationsTableRowModelsEvent={[Function EventEmitter_]}
>
  <div
    class="row"
  >
    <div
      class="col-12"
    >
      <table
        class="table table-responsive-lg table-striped table-bordered margin-bottom-0"
        id="notifications-table"
      >
        <thead>
          <tr
            class="bg-primary text-white"
          >
            <th
              class="sortable-header"
            >
               Title 
              <span
                class="fa-stack"
              >
                <i
                  class="fas fa-sort"
                />
              </span>
            </th>
            <th
              class="sortable-header"
            >
               Start Time 
              <span
                class="fa-stack"
              >
                <i
                  class="fas fa-sort"
                />
                <i
                  class="fas fa-sort-down"
                />
              </span>
            </th>
            <th
              class="sortable-header"
            >
               End Time 
              <span
                class="fa-stack"
              >
                <i
                  class="fas fa-sort"
                />
              </span>
            </th>
            <th
              class="sortable-header"
            >
               Target User 
              <span
                class="fa-stack"
              >
                <i
                  class="fas fa-sort"
                />
              </span>
            </th>
            <th
              class="sortable-header"
            >
               Style 
              <span
                class="fa-stack"
              >
                <i
                  class="fas fa-sort"
                />
              </span>
            </th>
            <th
              class="sortable-header"
            >
               Creation Time 
              <span
                class="fa-stack"
              >
                <i
                  class="fas fa-sort"
                />
              </span>
            </th>
            <th>
              Actions
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="table-success"
            id="notification1"
          >
            <td
              class="text-break"
            >
              valid title 1
            </td>
            <td
              class="text-break"
            >
              <span
                class="ngb-tooltip-class"
              >
                15 Sep 9:30 AM
              </span>
            </td>
            <td
              class="text-break"
            >
              <span
                class="ngb-tooltip-class"
              >
                15 Sep 9:30 AM
              </span>
            </td>
            <td
              class="text-break"
            >
              INSTRUCTOR
            </td>
            <td
              class="text-break alert alert-success"
            >
              Success (green)
            </td>
            <td
              class="text-break"
            >
              <span
                class="ngb-tooltip-class"
              >
                15 Sep 9:30 AM
              </span>
            </td>
            <td
              class="actions-cell"
            >
              <div
                class="d-flex"
              >
                <button
                  class="btn btn-light btn-sm"
                  type="button"
                >
                   Edit 
                </button>
                <button
                  class="btn btn-danger btn-sm"
                  type="button"
                >
                   Delete 
                </button>
              </div>
            </td>
          </tr>
          <tr
            id="notification2"
          >
            <td
              class="text-break"
            >
              valid title 2
            </td>
            <td
              class="text-break"
            >
              <span
                class="ngb-tooltip-class"
              >
                15 Dec 9:30 AM
              </span>
            </td>
            <td
              class="text-break"
            >
              <span
                class="ngb-tooltip-class"
              >
                15 Sep 9:30 AM
              </span>
            </td>
            <td
              class="text-break"
            >
              GENERAL
            </td>
            <td
              class="text-break alert alert-danger"
            >
              Danger (red)
            </td>
            <td
              class="text-break"
            >
              <span
                class="ngb-tooltip-class"
              >
                15 Nov 9:30 AM
              </span>
            </td>
            <td
              class="actions-cell"
            >
              <div
                class="d-flex"
              >
                <button
                  class="btn btn-light btn-sm"
                  type="button"
                >
                   Edit 
                </button>
                <button
                  class="btn btn-danger btn-sm"
                  type="button"
                >
                   Delete 
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</tm-notifications-table>
`;

exports[`NotificationsTableComponent should snap with default fields 1`] = `
<tm-notifications-table
  NotificationsTableHeaderColorScheme={[Function Object]}
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  __ngContext__={[Function LRootView]}
  deleteNotificationEvent={[Function EventEmitter_]}
  guessTimezone={[Function String]}
  headerColorScheme="0"
  loadNotificationEditFormEvent={[Function EventEmitter_]}
  notificationsTableRowModels={[Function Array]}
  notificationsTableRowModelsSortBy={[Function Number]}
  notificationsTableRowModelsSortOrder="0"
  simpleModalService={[Function SimpleModalService]}
  sortNotificationsTableRowModelsEvent={[Function EventEmitter_]}
>
  <div
    class="row"
  >
    <div
      class="col-12"
    >
      <table
        class="table table-responsive-lg table-striped table-bordered margin-bottom-0"
        id="notifications-table"
      >
        <thead>
          <tr
            class="bg-primary text-white"
          >
            <th
              class="sortable-header"
            >
               Title 
              <span
                class="fa-stack"
              >
                <i
                  class="fas fa-sort"
                />
              </span>
            </th>
            <th
              class="sortable-header"
            >
               Start Time 
              <span
                class="fa-stack"
              >
                <i
                  class="fas fa-sort"
                />
              </span>
            </th>
            <th
              class="sortable-header"
            >
               End Time 
              <span
                class="fa-stack"
              >
                <i
                  class="fas fa-sort"
                />
              </span>
            </th>
            <th
              class="sortable-header"
            >
               Target User 
              <span
                class="fa-stack"
              >
                <i
                  class="fas fa-sort"
                />
              </span>
            </th>
            <th
              class="sortable-header"
            >
               Style 
              <span
                class="fa-stack"
              >
                <i
                  class="fas fa-sort"
                />
              </span>
            </th>
            <th
              class="sortable-header"
            >
               Creation Time 
              <span
                class="fa-stack"
              >
                <i
                  class="fas fa-sort"
                />
                <i
                  class="fas fa-sort-down"
                />
              </span>
            </th>
            <th>
              Actions
            </th>
          </tr>
        </thead>
        <tbody>
        </tbody>
      </table>
    </div>
  </div>
</tm-notifications-table>
`;
